# optfx

./: README.md  docker-compose.yml  poisson.py  setup.cfg
.github/workflows/: main.yml
optfx/: __init__.py  abstract.py  adjoint.py  optimizer.py  utils.py
test/: test_utils.py
