[metadata]
name = optfx
version = attr: optfx.__version__
author = Naruki Ichihara
author_email = ichihara.naruki@nihon-u.ac.jp
long_description = file:README.md
url = https://github.com/Naruki-Ichihara/optfx
license = LICENSE
classifier =
    Development Status :: 1 - Pre-Alpha
    Programming Language :: Python
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    
[options]
zip_safe = False
packages = find:
install_requires =
  numpy